--- a/src/assets/type.scss
+++ b/src/assets/type.scss
@@ -160,6 +160,14 @@ h1 .dimm {
       border-bottom-right-radius: 4px;
     }
   }
+
+  &.goto-dimm {
+    background: #fafafa;
+
+    a {
+      font-weight: normal;
+    }
+  }
 }
 
 .goto + .goto {
