--- a/src/components/candidate/answer/src/template.html
+++ b/src/components/candidate/answer/src/template.html
@@ -6,7 +6,7 @@
 		<div class="box" :style="{'border-left': '3px solid ' + color}">
 			<div class="box-content">
 				<h3>
-					<router-link :to="'/otazky-pro-kandidaty/' + betterURL(data.name[1]) + '-' + betterURL(data.name[2])" class="is-span">
+					<router-link :to="'/senatni-volby-2020-cerven/otazky-pro-kandidaty/' + betterURL(data.name[1]) + '-' + betterURL(data.name[2])" class="is-span">
 						<person-name :data="data.name" />
 					</router-link>
 					<span class="compact-member dimm">
