--- a/src/assets/my-style.scss
+++ b/src/assets/my-style.scss
@@ -2,6 +2,45 @@
 @import "./type.scss";
 @import "./table.scss";
 
+.donio {
+  background: #fff2e1;
+  color: #141412;
+  padding: 2rem;
+
+	h4 {
+		margin: 0 0 1em;
+	}
+
+	p {
+		margin: 0 !important;
+	}
+
+	p + p {
+		margin-top: 1em !important;
+	}
+
+	a {
+		color: #e66d45;
+		font-weight: bold;
+	}
+
+	.button.button-primary {
+		border-radius: 0;
+		background: #e66d45;
+		border: none;
+		text-transform: uppercase;
+		letter-spacing: 2.5px;
+		font-size: 12px;
+		color: #fff2e1;
+
+		&:hover {
+			background: darken(#e66d45, 10%);
+			color: #fff;
+			cursor: pointer;
+		}
+	}
+}
+
 * {
 	box-sizing: border-box;
 }
