--- a/src/layout/homepage/src/template.html
+++ b/src/layout/homepage/src/template.html
@@ -73,7 +73,9 @@
       </div>
     </div>
   </div>
-		<share-block />
+	<share-block />
+	<br>
+	<donio-element />
 	<div class="b">
 		<h2>O projektu</h2>
 		<p class="center">Projekt <em>Programy do voleb</em> vznikl v roce 2018, neplánovaně a spontánně, během jednoho víkendu před senátními a komunálními volbami. Bylo asi měsíc do voleb a nedalo se toho moc stihnout. U dalších voleb už bylo víc času na přípravu. Prozatím vrcholem byly evropské volby 2019, příštím budou ty krajské. Prozatím se projekt věnoval těmto volbám:</p>
