--- a/src/layout/homepage/src/template.html
+++ b/src/layout/homepage/src/template.html
@@ -23,13 +23,25 @@
   <div class="part">
     <div class="banner-split">
       <div>
-        <outbound-link href="https://krajskevolby2020.programydovoleb.cz/anketa/strany">
-          <img src="https://krajskevolby2020.programydovoleb.cz/static/cta-anketa.png" alt="Dotazník" width="100%">
+        <outbound-link href="https://krajskevolby2020.programydovoleb.cz/anketa/volby">
+          <img src="https://krajskevolby2020.programydovoleb.cz/static/cta-volby.png" alt="Dotazník" width="100%">
+        </outbound-link>
+      </div>
+      <div>
+        <outbound-link href="https://krajskevolby2020.programydovoleb.cz/strany">
+          <img src="https://krajskevolby2020.programydovoleb.cz/static/cta-anketa.png?v=1" alt="Dotazník" width="100%">
+        </outbound-link>
+      </div>
+    </div>
+    <div class="banner-split">
+      <div>
+        <outbound-link href="https://krajskevolby2020.programydovoleb.cz/anketa/jste-pripraveni-na-krajske-volby">
+          <img src="https://krajskevolby2020.programydovoleb.cz/static/cta-kviz.png?v=1" alt="Dotazník" width="100%">
         </outbound-link>
       </div>
       <div>
         <outbound-link href="https://krajskevolby2020.programydovoleb.cz/dotaznik-ke-krajskym-volbam">
-          <img src="https://krajskevolby2020.programydovoleb.cz/static/cta-dotaznik.png" alt="Dotazník" width="100%">
+          <img src="https://krajskevolby2020.programydovoleb.cz/static/cta-dotaznik.png?v=2" alt="Dotazník" width="100%">
         </outbound-link>
       </div>
     </div>
